IE11 - fix slide content alignment, photo credit close icon alignment

--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -49,6 +49,7 @@
 	}
 	.inner-frame {
 		min-height: 100vh;
+		height: 100%;
 		padding: 100px 60px 185px 60px;
 
 		&.centered {
@@ -338,6 +339,7 @@
 		content: '×';
 		position: absolute;
 		right: 50px;
+		bottom: 0;
 		font-size: 32px;
 		cursor: pointer;
 	}
